refactor(server): use enum for hour format
